--- a/example/index.html
+++ b/example/index.html
@@ -34,6 +34,7 @@
     </head>
     <body>
         <div id="app"></div>
+        <p>click head to sing a song; click body to emit a motion<p>
         <script type="text/javascript" src="index.js" charset="utf-8"></script>
     </body>
 </html>
