remove sdk file

--- a/example/index.html
+++ b/example/index.html
@@ -21,6 +21,7 @@
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="HandheldFriendly" content="true">
         <meta name="MobileOptimized" content="320" />
+        <script type="text/javascript" src="live2d.min.js" charset="utf-8"></script>
         <style>
             * {
                 margin: 0;
